Fix vertical align of direction shortcuts (#1067)

--- a/src/scss/includes/panels/service_panel.scss
+++ b/src/scss/includes/panels/service_panel.scss
@@ -11,6 +11,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: flex-start;
 
   .mainActionButton {
     width: 84px;
@@ -38,9 +39,7 @@
 
   .service_panel__categories,
   .service_panel__actions {
-    margin: 0 auto;
-    display: block;
-    text-align: center;
+    justify-content: center;
 
     .mainActionButton {
       width: 25%;
